...

                        // Phone input
                        Expanded(
                          child: SizedBox(
                            height: 52,
                            child: Semantics(
                              identifier: 'login_field_phone',
                              child: TextField(
                                controller: _phoneController,
                                keyboardType: TextInputType.number,
                                textDirection: TextDirection.ltr,
                                onSubmitted: (_) => _onLogin(),
                                onChanged: (_) {
...
